@@ -1,3 +1,13 @@
+2002-09-15  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* unix/configure: Regen.
+	* unix/tcl.m4: Update from Tcl.
+	* unix/tkUnixEvent.c (TkpCloseDisplay): Use PEEK_XCLOSEIM
+	to examine the input context queue before invoking
+	XCloseIM. Generate an assert if there is an input
+	context that has not been freed.
+	[Patch 570902]
+
 2002-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* generic/tk.h: Moved RC_INVOKED down so that tcl.h is still
